--- a/public/config.json
+++ b/public/config.json
@@ -20,7 +20,7 @@
     "execute": {
       "inArguments": [],
       "outArguments": [],
-      "url": "https://journey-salesforce.herokuapp.com/journeybuilder/execute",
+      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/execute",
       "verb": "POST",
       "body": "",
       "header": "",
@@ -30,24 +30,24 @@
     }
   },
   "configurationArguments": {
-    "applicationExtensionKey": "045ae7c7-daf3-467c-b57d-7d0fe3634ce2",
+    "applicationExtensionKey": "846afa74-67d0-4f86-91d8-b5551a83cbc3",
     "save": {
-      "url": "https://journey-salesforce.herokuapp.com/journeybuilder/save",
+      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/save",
       "verb": "POST",
       "useJwt": true
     },
     "publish": {
-      "url": "https://journey-salesforce.herokuapp.com/journeybuilder/publish",
+      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/publish",
       "verb": "POST",
       "useJwt": true
     },
     "validate": {
-      "url": "https://journey-salesforce.herokuapp.com/journeybuilder/validate",
+      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/validate",
       "verb": "POST",
       "useJwt": true
     },
     "stop": {
-      "url": "https://journey-salesforce.herokuapp.com/journeybuilder/stop",
+      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/stop",
       "verb": "POST",
       "useJwt": true
     }
