--- a/public/config.json
+++ b/public/config.json
@@ -18,17 +18,28 @@
     }
   },
   "arguments": {
+    "executionMode": "{{Context.ExecutionMode}}",
+    "definitionId": "{{Context.DefinitionId}}",
+    "activityId": "{{Activity.Id}}",
+    "contactKey": "{{Context.ContactKey}}",
     "execute": {
-      "inArguments": [],
-      "outArguments": [],
-      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/execute",
+	  "inArguments": [],
+      "outArguments": [{"postman_error":"Text"},{"postman_request":"Text"},{"postman_response":"Text"}],
+      "url": "https://sfmc-postman.azurewebsites.net/api/RestRelay/SFMC_Custom_Actiivty_Rest_Handler",
       "verb": "POST",
-      "body": "",
-      "header": "",
+      "body": "{\"data\":\"\",\"headers\":[],\"outArgumentCode\":[],\"url\":\"\",\"methodType\":\"\",\"mediaType\":\"application/json\",\"t\":\"\",\"journeyName\":\"\",\"logData\":\"\",\"mid\":\"\",\"subscriberKey\":\"{{Contact.Key}}\",\"journeyVersionNumber\":\"{{Context.VersionNumber}}\",\"additional\":\"{{Context}}\",\"journeyIDReal\":\"\"}",
+	  "journeyDataObject": "",
+	  "header": "",
       "format": "json",
-      "useJwt": true,
-      "timeout": 10000
-    }
+      "useJwt": false,
+      "timeout": 100000,
+	  "retryCount": 5,
+	  "retryDelay": 10000
+    },
+    "testExecute": "",
+    "startActivityKey": "{{Context.StartActivityKey}}",
+    "definitionInstanceId": "{{Context.DefinitionInstanceId}}",
+    "requestObjectId": "{{Context.RequestObjectId}}"
   },
   "configurationArguments": {
     "applicationExtensionKey": "846afa74-67d0-4f86-91d8-b5551a83cbc3",
@@ -70,7 +81,35 @@
     "arguments": {
       "execute": {
         "inArguments": [],
-        "outArguments": []
+        "outArguments": [
+		   {
+            "postman_error": {
+              "dataType": "Text",
+              "isNullable": true,
+              "direction": "Out",
+              "readOnly": false,
+              "access": "Visible"
+            }
+          },
+          {
+            "postman_request": {
+              "dataType": "Text",
+              "isNullable": true,
+              "direction": "Out",
+              "readOnly": false,
+              "access": "Visible"
+            }
+          },
+          {
+            "postman_response": {
+              "dataType": "Text",
+              "isNullable": true,
+              "direction": "Out",
+              "readOnly": false,
+              "access": "Visible"
+            }
+          }
+		]
       }
     }
   }
