--- a/public/config.json
+++ b/public/config.json
@@ -31,7 +31,7 @@
 	  "journeyDataObject": "",
 	  "header": "",
       "format": "json",
-      "useJwt": false,
+      "useJwt": true,
       "timeout": 100000,
 	  "retryCount": 5,
 	  "retryDelay": 10000
