--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.15.4",
     "jsonwebtoken": "^8.0.1",
+    "node-http": "^0.0.5",
     "request": "^2.81.0",
     "require": "^2.4.20"
   }
