--- a/public/config.json
+++ b/public/config.json
@@ -23,18 +23,18 @@
     "activityId": "{{Activity.Id}}",
     "contactKey": "{{Context.ContactKey}}",
     "execute": {
-	  "inArguments": [],
-      "outArguments": [{"postman_error":"Text"},{"postman_request":"Text"},{"postman_response":"Text"}],
+      "inArguments": [],
+      "outArguments": [],
       "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/execute",
       "verb": "POST",
       "body": "{\"data\":\"\",\"headers\":[],\"outArgumentCode\":[],\"url\":\"\",\"methodType\":\"\",\"mediaType\":\"application/json\",\"t\":\"\",\"journeyName\":\"\",\"logData\":\"\",\"mid\":\"\",\"subscriberKey\":\"{{Contact.Key}}\",\"journeyVersionNumber\":\"{{Context.VersionNumber}}\",\"additional\":\"{{Context}}\",\"journeyIDReal\":\"\"}",
-	  "journeyDataObject": "",
-	  "header": "",
+      "journeyDataObject": "",
+      "header": "",
       "format": "json",
       "useJwt": true,
       "timeout": 100000,
-	  "retryCount": 5,
-	  "retryDelay": 10000
+      "retryCount": 5,
+      "retryDelay": 10000
     },
     "testExecute": "",
     "startActivityKey": "{{Context.StartActivityKey}}",
