--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bower": "^1.8.0",
     "errorhandler": "^1.5.0",
     "express": "^4.15.4",
+    "jsonpath": "^1.1.1",
     "jsonwebtoken": "^8.0.1",
     "node-http": "^0.0.5",
     "request": "^2.81.0",
