--- a/public/config.json
+++ b/public/config.json
@@ -25,7 +25,7 @@
     "execute": {
       "inArguments": [],
       "outArguments": [],
-      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/execute",
+      "url": "https://math-journey-b5b7jrkqe-renato-valladaos-projects.vercel.app/journeybuilder/execute",
       "verb": "POST",
       "body": "{\"data\":\"\",\"headers\":[],\"outArgumentCode\":[],\"url\":\"\",\"methodType\":\"\",\"mediaType\":\"application/json\",\"t\":\"\",\"journeyName\":\"\",\"logData\":\"\",\"mid\":\"\",\"subscriberKey\":\"{{Contact.Key}}\",\"journeyVersionNumber\":\"{{Context.VersionNumber}}\",\"additional\":\"{{Context}}\",\"journeyIDReal\":\"\"}",
       "journeyDataObject": "",
@@ -44,22 +44,22 @@
   "configurationArguments": {
     "applicationExtensionKey": "846afa74-67d0-4f86-91d8-b5551a83cbc3",
     "save": {
-      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/save",
+      "url": "https://math-journey-b5b7jrkqe-renato-valladaos-projects.vercel.app/journeybuilder/save",
       "verb": "POST",
       "useJwt": true
     },
     "publish": {
-      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/publish",
+      "url": "https://math-journey-b5b7jrkqe-renato-valladaos-projects.vercel.app/journeybuilder/publish",
       "verb": "POST",
       "useJwt": true
     },
     "validate": {
-      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/validate",
+      "url": "https://math-journey-b5b7jrkqe-renato-valladaos-projects.vercel.app/journeybuilder/validate",
       "verb": "POST",
       "useJwt": true
     },
     "stop": {
-      "url": "https://sfmc-custom-activity-math-ef70b3a192ad.herokuapp.com/journeybuilder/stop",
+      "url": "https://math-journey-b5b7jrkqe-renato-valladaos-projects.vercel.app/journeybuilder/stop",
       "verb": "POST",
       "useJwt": true
     }
